vlib/v/parser/tests/type_alias_same_type_err.out
vlib/v/parser/tests/type_alias_same_type_err.vv:3:1: error: invalid recursion type Foo
    1 | struct Foo{}
    2 | 
    3 | type Foo = Foo
      | ~~~~~~~~~~~~~~
    4 | 
    5 | fn main() {